@@ -19,7 +19,7 @@
 	<key>Java</key>
 	<dict>
 		<key>ClassPath</key>
-		<string>/System/Library/Java:$JAVAROOT/BNUBot.jar:lib/ashwood.jar:lib/cayenne.jar:lib/commons-collections.jar:lib/commons-lang.jar:lib/commons-logging.jar:lib/derby.jar:lib/mysql.jar:lib/velocity.jar</string>
+		<string>/System/Library/Java:$JAVAROOT/BNUBot.jar:lib/ashwood.jar:lib/cayenne.jar:lib/commons-collections.jar:lib/commons-lang.jar:lib/commons-logging.jar:lib/velocity.jar</string>
 		<key>JVMVersion</key>
 		<string>1.5+</string>
 		<key>MainClass</key>
